Improve the representation

--- a/5_dft.ipynb
+++ b/5_dft.ipynb
@@ -2,21 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "import cmath as cm\n",
-    "\n",
-    "%matplotlib inline"
+    "import cmath as cm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1180d1690>]"
+       "[<matplotlib.lines.Line2D at 0x12ca8d290>]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -177,26 +175,26 @@
     "plt.title(f'Discrete Signal (Sampled)')\n",
     "plt.xlabel(\"m (kHz)\")\n",
     "plt.ylabel(\"Amplitude\")\n",
-    "plt.stem(range(len(y_discrete)), y_discrete)\n",
-    "plt.plot(range(len(y_discrete)), y_discrete)\n",
+    "plt.stem(y_discrete)\n",
+    "plt.plot(range(len(y_discrete)),y_discrete)\n",
     "\n",
     "plt.subplot(2, 3, 3)\n",
     "plt.title(f'Magnitude Spectrum')\n",
     "plt.xlabel(\"m (kHz)\")\n",
     "plt.ylabel(\"Amplitude\")\n",
-    "plt.stem(range(len(y_dft)), np.abs(y_dft))\n",
+    "plt.stem(np.abs(y_dft))\n",
     "\n",
     "plt.subplot(2, 3, 4)\n",
     "plt.title(f'Phases Spectrum')\n",
     "plt.xlabel(\"m (kHz)\")\n",
     "plt.ylabel(\"Phase (in Degree)\")\n",
-    "plt.stem(range(len(y_phases)), y_phases)\n",
+    "plt.stem(y_phases)\n",
     "\n",
     "plt.subplot(2, 3, 5)\n",
     "plt.title(f'Reconstructed Signal')\n",
     "plt.xlabel(\"m (kHz)\")\n",
     "plt.ylabel(\"Phase (in Degree)\")\n",
-    "plt.stem(range(len(y_idft)), y_idft.real)\n",
+    "plt.stem(y_idft.real)\n",
     "plt.plot(range(len(y_idft)), y_idft.real)"
    ]
   },
