--- a/7_1_pre_assignment_study_file_loading.ipynb
+++ b/7_1_pre_assignment_study_file_loading.ipynb
@@ -320,7 +320,12 @@
    "source": [
     "The block size is calculated by multiplying the sampling frequency (fs) by 0.023. This represents the number of sample points that correspond to a block of 23 milliseconds (0.023 seconds) of audio. For example, if the sampling frequency is 16,000 Hz, then a block of 0.023 seconds would contain 0.023 * 16000 = 368 sample points.\n",
     "\n",
-    "Q: Should we need to use block?"
+    "Q: Should we need to use block? <br>\n",
+    "A:                              <br>\n",
+    "Q: What should be the size of the block? like here we use 0.023 <br>\n",
+    "A:                               <br>\n",
+    "Q: There is two types of normalization? divide by 2**15 or np.max(np.abs(audio_data)). What should I use? <br>\n",
+    "A:                               <br>"
    ]
   },
   {
